--- a/discord.html
+++ b/discord.html
@@ -2,7 +2,7 @@
     <head>
         <title>KyzerNetwork</title>
         <link rel="stylesheet" href="Style.css" />
-        <link rel="icon" href="kyzerlogoonly.png">
+        <link rel="icon" href="LogoKyzerS2.jpg">
     </head>
     <body>
         <!-- NAVIGATION BAR -->
@@ -27,15 +27,11 @@
         </div>
         <!-- NAVIGATION BAR SELESAI -->
         <div class="container-content">
-            <img src="kyzerlogoonly-removebg-preview.png" class="img-content" />
+            <img src="LogoKyzerS2.jpg" class="img-content" />
         </div>
         <!-- CONTENT PERKENALAN -->
-        <div class="container-perks">
-            <body>
-                <a href="file:///C:/Users/USER/Downloads/Website%20KyzerNetwork/Global.html">
-                    <h1>🌐Global</h1>
-                </a>
-            </body>
+        <div class="store-content">
+            <iframe src="https://discord.com/widget?id=1106805822211764314&theme=dark" class="discord-box" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
         <!-- CONTENT STORE -->
         <div>
