--- a/ipan.html
+++ b/ipan.html
@@ -2,7 +2,7 @@
     <head>
         <title>KyzerNetwork</title>
         <link rel="stylesheet" href="Style.css" />
-        <link rel="icon" href="kyzerlogoonly.png">
+        <link rel="icon" href="LogoKyzerS2.jpg">
     </head>
     <body>
         <!-- NAVIGATION BAR -->
@@ -20,17 +20,20 @@
                 <li class="li-navbar">
                     <a href="perks.html" class="a-navbar">PERKS</a>
                 </li>
+                <li class="li-navbar">
+                    <a href="discord.html" class="a-navbar">DISCORD</a>
+                </li>
             </ul>
         </div>
         <!-- NAVIGATION BAR SELESAI -->
         <div class="container-content">
-            <img src="kyzerlogoonly-removebg-preview.png" class="img-content" />
+            <img src="LogoKyzerS2.jpg" class="img-content" />
         </div>
         <!-- CONTENT PERKENALAN -->
         <div class="only-ipan">
             <img src="gayaipan.png" class="ipan-only" />
             <p class="textIPK">
-                Kedudukan: Developers / Dev  Role: SM CM DEV BFM LD DM BMA Name Him: ipanraman  About Him: Fast Respon
+                Kedudukan: CEO / DEVELOPER  Role: SM CM DEV BFM LD DM BMA Name Him: ipanraman  About Him: Fast Respon
             </p>
         </div>
         <!-- CONTENT STORE -->
