--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
     <head>
         <title>KyzerNetwork</title>
         <link rel="stylesheet" href="Style.css" />
-        <link rel="icon" href="LogoKyzerS2.jpg">
+        <link rel="icon" href="kyzerlogoonly.png">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,14 +24,16 @@
                 <li class="li-navbar">
                     <a href="perks.html" class="a-navbar">PERKS</a>
                 </li>
-                <li class="li-navbar">
-                    <a href="discord.html" class="a-navbar">DISCORD</a>
-                </li>
             </ul>
+        </div>
+        <div>
+            <ul class="ul-navbar">
+                <li class="li-navbar">
+                    <a href="https://discord.com/api/oauth2/authorize?client_id=1148579984055750748&redirect_uri=https://www.kyzernetwork.top&response_type=code&scope=identify%20email" class="login-navbar">Login With Discord</a>
         </div>
         <!-- NAVIGATION BAR SELESAI -->
         <div class="container-content">
-            <img src="LogoKyzerS2.jpg" class="img-content" />
+            <img src="kyzerlogoonly-removebg-preview.png" class="img-content" />
         </div>
         <!-- CONTENT PERKENALAN -->
         <div class="container-home">
