--- a/perks.html
+++ b/perks.html
@@ -2,6 +2,7 @@
     <head>
         <title>KyzerNetwork</title>
         <link rel="stylesheet" href="Style.css" />
+        <link rel="icon" href="LogoKyzerS2.jpg">
     </head>
     <body>
         <!-- NAVIGATION BAR -->
@@ -19,11 +20,14 @@
                 <li class="li-navbar">
                     <a href="perks.html" class="a-navbar">PERKS</a>
                 </li>
+                <li class="li-navbar">
+                    <a href="discord.html" class="a-navbar">DISCORD</a>
+                </li>
             </ul>
         </div>
         <!-- NAVIGATION BAR SELESAI -->
         <div class="container-content">
-            <img src="kyzerlogoonly-removebg-preview.png" class="img-content" />
+            <img src="LogoKyzerS2.jpg" class="img-content" />
         </div>
         <!-- CONTENT PERKENALAN -->
         <div>
