--- a/renei.html
+++ b/renei.html
@@ -2,7 +2,7 @@
     <head>
         <title>KyzerNetwork</title>
         <link rel="stylesheet" href="Style.css" />
-        <link rel="icon" href="kyzerlogoonly.png">
+        <link rel="icon" href="LogoKyzerS2.jpg">
     </head>
     <body>
         <!-- NAVIGATION BAR -->
@@ -20,17 +20,20 @@
                 <li class="li-navbar">
                     <a href="perks.html" class="a-navbar">PERKS</a>
                 </li>
+                <li class="li-navbar">
+                    <a href="discord.html" class="a-navbar">DISCORD</a>
+                </li>
             </ul>
         </div>
         <!-- NAVIGATION BAR SELESAI -->
         <div class="container-content">
-            <img src="kyzerlogoonly-removebg-preview.png" class="img-content" />
+            <img src="LogoKyzerS2.jpg" class="img-content" />
         </div>
         <!-- CONTENT PERKENALAN -->
         <div class="only-ipan">
             <img src="gayarenei.png" class="renei-only" />
             <p class="textREK">
-                Kedudukan: Administrasi / ADMIN  Role:  SM PRM CM BFM RM PM PMA  Name Him: Renei | eitun | xNeizy    About Him: Low Respon
+                Kedudukan: ADMINISTRATOR  Role:  SM PRM CM BFM RM PM  Name Him: Renei | xNeizy    About Him: Low Respon
             </p>
         </div>
         <!-- CONTENT STORE -->
