--- a/zyclex.html
+++ b/zyclex.html
@@ -30,7 +30,7 @@
         <div class="only-ipan">
             <img src="gayaZyclex.png" class="zyclex-only" />
             <p class="textZYK">
-                Kedudukan: Staff / New Staff Role:  RM PRM B DFM Name Him: Zyclex     About Him: Normal Respon
+                Kedudukan: Staff / New Staff Role:  RM PRM B DFM CM LD Name Him: Zyclex | Zycles (adik)    About Him: Normal Respon
             </p>
         </div>
         <!-- CONTENT STORE -->
