--- a/rampage.html
+++ b/rampage.html
@@ -2,7 +2,7 @@
     <head>
         <title>KyzerNetwork</title>
         <link rel="stylesheet" href="Style.css" />
-        <link rel="icon" href="kyzerlogoonly.png">
+        <link rel="icon" href="LogoKyzerS2.jpg">
     </head>
     <body>
         <!-- NAVIGATION BAR -->
@@ -20,18 +20,19 @@
                 <li class="li-navbar">
                     <a href="perks.html" class="a-navbar">PERKS</a>
                 </li>
+                <li class="li-navbar">
+                    <a href="discord.html" class="a-navbar">DISCORD</a>
+                </li>
             </ul>
         </div>
         <!-- NAVIGATION BAR SELESAI -->
         <div class="container-content">
-            <img src="kyzerlogoonly-removebg-preview.png" class="img-content" />
+            <img src="LogoKyzerS2.jpg" class="img-content" />
         </div>
         <!-- CONTENT PERKENALAN -->
         <div class="only-ipan">
             <img src="gayarampage.png" class="rampage-only" />
-            <p class="textIPK">
-                Kedudukan: Developers / Dev  Role:  DEV CM RM BFM AMA Name Him: RampageAniq23     About Him: Super Slow Respon
-            </p>
+            <p class="textIPK">Kedudukan: CEO / DEVELOPER Role:  DEV CM RM BFM AMA Name Him: RampageAniq23  About Him: Slow Respon</p>
         </div>
         <!-- CONTENT STORE -->
         <div>
